--- a/manifest.json
+++ b/manifest.json
@@ -1,38 +1,31 @@
 {
-    "manifest_version": 2,
-    "name": "SpaceLLama",
-    "version": "1.0",
-    "description": "Summarize web pages using OLLAMA",
-    "permissions": [
-      "activeTab",
-      "storage",
-      "<all_urls>",
-      "tabs"
-    ],
-    "browser_action": {
-      "default_title": "SpaceLLama",
-      "default_icon": "icon.png"
-    },
-    "sidebar_action": {
-      "default_title": "SpaceLLama",
-      "default_panel": "sidebar/sidebar.html",
-      "default_icon": "icon.png"
-    },
-    "background": {
-      "scripts": ["background.js"],
-      "persistent": false
-    },
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content_scripts/content.js"]
-      }
-    ],
-    "options_ui": {
-      "page": "options/options.html",
-      "open_in_tab": true
-    },
-    "web_accessible_resources": [
-      "sidebar/marked.min.js"
-    ]
-  }
+  "manifest_version": 2,
+  "name": "SpaceLLama",
+  "version": "1.1",
+  "description": "Summarize web pages using Ollama. Supports custom models, token limits, system prompts, chunking, and more. See https://github.com/tcsenpai/spacellama for more information.",
+  "permissions": ["activeTab", "storage", "<all_urls>", "tabs"],
+  "browser_action": {
+    "default_title": "SpaceLLama",
+    "default_icon": "icon.png"
+  },
+  "sidebar_action": {
+    "default_title": "SpaceLLama",
+    "default_panel": "sidebar/sidebar.html",
+    "default_icon": "icon.png"
+  },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content_scripts/content.js"]
+    }
+  ],
+  "options_ui": {
+    "page": "options/options.html",
+    "open_in_tab": true
+  },
+  "web_accessible_resources": ["sidebar/marked.min.js", "model_tokens.json"]
+}
