Remove deleted resource file from manifest

--- a/manifest.json
+++ b/manifest.json
@@ -27,5 +27,5 @@
     "page": "options/options.html",
     "open_in_tab": true
   },
-  "web_accessible_resources": ["sidebar/marked.min.js", "model_tokens.json"]
+  "web_accessible_resources": ["sidebar/marked.min.js"]
 }
