--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "SpaceLLama",
-  "version": "1.7",
+  "version": "2.0",
   "description": "Summarize web pages using Ollama. Supports custom models, token limits, system prompts, chunking, and more. See https://github.com/tcsenpai/spacellama for more information.",
   "permissions": ["activeTab", "storage", "<all_urls>", "tabs"],
   "browser_action": {
@@ -15,7 +15,7 @@
   },
   "background": {
     "scripts": ["background.js"],
-    "persistent": false
+    "persistent": true
   },
   "content_scripts": [
     {
